# DataWise_Desktop

./: .gitignore  CONTRIBUTING.md  Cargo.toml
.github/workflows/: ci.yml
datawise-core/: Cargo.toml
datawise-core/src/: executor.rs  exporter.rs  importer.rs  lib.rs  protocol.rs
datawise-core/tests/: import_export_test.rs  performance_benchmark.rs
datawise-egui/: Cargo.toml
datawise-egui/src/: main.rs
datawise-tauri/: Cargo.toml
datawise-tauri/src/: App.css  App.tsx
datawise-tauri/src-tauri/: Cargo.toml
datawise-tauri/src-tauri/src/: lib.rs  main.rs
datawise-tauri/src-tauri/tests/: integration_test.rs
datawise-tui/: Cargo.toml
datawise-tui/src/: main.rs
docs/: README.md  architecture_decisions.md  core_api_usage.md  design_v1-ui_spec.md  design_v1.md  e2e_testing_plan.md  executive_summary.md  feasibility_analysis.md  import_feature_improvements.md  interaction_spec.md  performance_benchmark.md  protocol_versioning.md  quick_start_guide.md  testing_strategy.md  visual_spec.md
docs/adr/: ADR-001-protocol-versioning.md
