[package]
name = "datawise-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
datawise-core = { path = "../datawise-core" }
ratatui = "0.28"
crossterm = "0.28"
tui-textarea = "0.6"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
